Bug 168438 - [26.2] Border Style icon in the toolbar does not work
Summary: [26.2] Border Style icon in the toolbar does not work
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:26.8.0 target:26.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-09-17 06:58 UTC by nobu
Modified: 2026-01-28 15:05 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nobu 2025-09-17 06:58:09 UTC
Description:
Border Style icon in the toolbar does not work.

Steps to Reproduce:
1. Open new Calc.
2. Select Cell [A1].
3. Draw Borders (ex. by Borders Icon in toolbar).
4. Change Border Style by Border Style in toolbar.

Actual Results:
5. The border style is not changed.

Expected Results:
5. The border style changes accordingly.


Reproducible: Always


User Profile Reset: No

Additional Info:

Not Reproduced with
Version: 25.8.1.1 (X86_64)
Build ID: 54047653041915e595ad4e45cccea684809c77b5
CPU threads: 4; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded

Not Reproduced with
[2025-06-10]
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 389325166a3357d7a4e557dc4c223fe0bb7aeadd
CPU threads: 4; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: ja-JP (ja_JP); UI: en-US
Calc: CL threaded

Not Reproduced with
[2025-07-10]
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7ef1c437f30b0869a5b9fa33809bac2c6665ace3
CPU threads: 2; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: ja-JP (ja_JP.UTF-8); UI: en-US
Calc: threaded

===

Reproducible with
[2025-08-17]
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 08b0b260f52483090d94a6d5bd0b053bb1b51c9e
CPU threads: 2; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: ja-JP (ja_JP.UTF-8); UI: en-US
Calc: threaded

Reproducible with
[2025-09-17]
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d48fddcd2014c1366766b3785f8b533f8cb545c7
CPU threads: 4; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: ja-JP (ja_JP); UI: en-US
Calc: CL threaded
Comment 1 m_a_riosv 2025-09-17 19:56:18 UTC
Reproducible
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 8bf0692331c335fc285794de8858eb555b19e1d1
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded

Not reproducible
Version: 25.8.2.0.0+ (X86_64) / LibreOffice Community
Build ID: 4666d701312615b43e698f67e3443dc1a13dcf20
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 2 Saburo 2025-09-18 07:44:08 UTC
bibisected with linux-64-26.2 f978d3aee9be1d9d3001301a9eff2662f78e578b is the first bad commit
source 49956b7a30916c67a8ca4cad56bf5194033f9e48

commit 49956b7a30916c67a8ca4cad56bf5194033f9e48
author	Pranam Lashkari <lpranam@collabora.com>	Wed Aug 13 21:55:40 2025 +0530

uno: added parameters to LineStyle (SID_FRAME_LINESTYLE)

adding CC: Pranam Lashkari
Please, take a look?
Comment 3 Buovjaga 2025-10-26 16:29:46 UTC
(In reply to Saburo from comment #2)
> bibisected with linux-64-26.2 f978d3aee9be1d9d3001301a9eff2662f78e578b is
> the first bad commit
> source 49956b7a30916c67a8ca4cad56bf5194033f9e48
> 
> commit 49956b7a30916c67a8ca4cad56bf5194033f9e48
> author	Pranam Lashkari <lpranam@collabora.com>	Wed Aug 13 21:55:40 2025 +0530
> 
> uno: added parameters to LineStyle (SID_FRAME_LINESTYLE)

Btw., this same commit *fixed* bug 155673. So in theory the commit would be nice to backport to 25.8, but this further fix would be needed first.
Comment 4 Buovjaga 2026-01-13 18:20:05 UTC
Still repro with fresh daily build

Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 680(Build:0)
CPU threads: 2; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 5 Commit Notification 2026-01-16 11:01:30 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dbd528e05fd71080a0f12d42b3204e607ff02f43

tdf#168438: fix parameters in LineStyle (SID_FRAME_LINESTYLE)

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 nobu 2026-01-25 21:01:52 UTC
Works well.

[2026-01-25]
Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 680(Build:0)
CPU threads: 4; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded
Comment 7 Commit Notification 2026-01-26 11:02:09 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/280992d566575388229f105514abae6db0810aa4

tdf#168438: fix parameters in LineStyle (SID_FRAME_LINESTYLE)

It will be available in 26.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2026-01-26 12:16:40 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-26-2-0":

https://git.libreoffice.org/core/commit/25553704ca6c238ec7d0afa2f1cc97beb4718673

tdf#168438: fix parameters in LineStyle (SID_FRAME_LINESTYLE)

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2026-01-28 15:05:23 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dc5920f7a21a3f347d021d2841bc474e3afebd51

tdf#168438: sc_uicalc: Add test

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.