tdf#168438: fix parameters in LineStyle (SID_FRAME_LINESTYLE)

after
commit 49956b7a30916c67a8ca4cad56bf5194033f9e48
Author: Pranam Lashkari <lpranam@collabora.com>
Date:   Wed Aug 13 21:55:40 2025 +0530

    uno: added parameters to LineStyle (SID_FRAME_LINESTYLE)

SID_FRAME_LINESTYLE was removed from the list of parameters,
so add it back and remove the duplicated SfxInt16Item LineStyle FN_PARAM_1
parameter
Also simplify the code in ScFormatShell::ExecuteAttr by using HasItem

Change-Id: I16025ac37a4f1cf2842356ed86b411eba2fa1bf6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197270
Tested-by: Jenkins
Reviewed-by: Pranam Lashkari <lpranam@collabora.com>
(cherry picked from commit dbd528e05fd71080a0f12d42b3204e607ff02f43)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197441
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>